# phishguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  phishing_data.json  pyproject.toml  pytest.ini  requirements-dev.txt  run_todo_app.bat  to-do list application.py  todo-app.spec  tox.ini
.github/workflows/: ci.yml  get-started-with-github-actions.yml  python-ci.yml
FeedBack/: feedback_1770534952.json
backups/: tasks-.json
docs/: DEV_GUIDE.md
project 1 - v3 bst/: README.md  app.py  phishing_data.json
project 1 - v3 bst/phishguard/static/: script.js  style.css
project 1 - v3 bst/phishguard/templates/: index.html
scripts/: entry_point.py
static/: script.js  style.css
templates/: index.html
tests/: conftest.py  test_app.py  test_model.py  test_storage_fs.py  test_storage_sqlite.py
todo_app/: __main__.py  cli.py  controller.py  logging_config.py  model.py  paths.py  storage.py  storage_encrypted.py  storage_fs.py  storage_sqlite.py  view_tk.py
todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
